Feat: Historial de compras
Se añadió la funcionalidad de historial de compras
